I added the base files for day 3 part 1.

--- a/JSadvent.html
+++ b/JSadvent.html
@@ -13,5 +13,7 @@
     <span id="advent1.2">Answer advent 1.2</span><br>
     <span id="advent2.1">Answer advent 2.1</span><br>
     <span id="advent2.2">Answer advent 2.2</span><br>
+    <span id="advent3.1">Answer advent 3.1</span><br>
+    <span id="advent3.2">Answer advent 3.2</span><br>
 </body>
 </html>
